--- a/src/lib/systemd/system/skyweather.service
+++ b/src/lib/systemd/system/skyweather.service
@@ -14,6 +14,9 @@ Type=simple
 WorkingDirectory=/home/pi/SDL_Pi_SkyWeather2
 ExecStart=/usr/bin/python3 /home/pi/SDL_Pi_SkyWeather2/SkyWeather2.py
 StandardInput=tty-force
+StandardOutput=file:/var/log/skyweather2.log
+StandardError=file:/var/log/skyweather2_err.log
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
