--- a/src/lib/systemd/system/skydash.service
+++ b/src/lib/systemd/system/skydash.service
@@ -11,11 +11,11 @@ Conflicts=getty@tty1.service
 
 [Service]
 Type=simple
-WorkingDirectory=/home/pi/SDL_Pi_SkyWeather2/dash_app
-ExecStart=/usr/bin/python3 /home/pi/SDL_Pi_SkyWeather2/dash_app/index.py
+WorkingDirectory=/home/pi/src/SDL_Pi_SkyWeather2/dash_app
+ExecStart=/usr/bin/python3 /home/pi/src/SDL_Pi_SkyWeather2/dash_app/index.py
 StandardInput=tty-force
 StandardOutput=file:/var/log/skydash.log
-StandardError=file:/var/log/skydash_err.log
+StandardError=file:/var/log/skydash.log
 Restart=always
 
 [Install]
